final fixes and readme. FULL READY
